# granita

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
examples/single-http-request/: Cargo.toml
examples/single-http-request/src/: main.rs
examples/test-server/: Cargo.toml
examples/test-server/src/: main.rs
examples/xtask/: Cargo.toml
examples/xtask/src/: main.rs
src/: builder.rs  context.rs  error.rs  lib.rs  load_profile.rs  main.rs  prelude.rs  request.rs  scenario.rs
src/engine/: http_client.rs  metrics.rs  mod.rs  request_executor.rs
src/engine/sinks/: console_sink.rs  mod.rs
tests/: integration_test.rs
tests/common/: mod.rs
