[package]
name = "test-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
bytes = "1"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rand = "0.10.0"